--- a/index.html
+++ b/index.html
@@ -23,22 +23,25 @@
     <section class='startQuiz box endClose' id='startBox'>
       <img src='images/102508474-1568659085331preview-1.jpg' alt='The cast of Seinfeld sitting together' class='seinfeldgroupimg'>
     </section>
+    <form id="form">
     <section class='questionBox endClose' id='questionBox'>
     </section>
     <!-- radios of possible answers -->
     <section class='answerBox endClose' id='answerBox'>
     </section>
+    <button class="button">Submit</button>
+    </form>
     <!-- displays after answer is submitted: right or wrong -->
     <section class='responseBox endClose' id='responseBox'>
 		<div id="correctAnswer" class="correctAnswer"></div>
 		<div id="wrongAnswer" class="wrongAnswer">
-		</div>
+    </div>
     </section>
     <!-- very end, after all answers submitted -->
     <section class='finalBox' id='finalBox'>
     </section>
     <div class='button-class'>
-        <button type='button' class='startButton button' id='startButton'>Start!</button>
+        <button type='submit' class='startButton button' id='startButton'>Start!</button>
       </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
