--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class='scoreKeeper endClose'>
         <ul>
           <li class='questiontrack' id='questiontrack'>Question: 
-            <span class='questionnumber' id='questionnumber'>0</span>/5</li>
+            <span class='questionnumber' id='questionnumber'>0</span>/<span id="numquestion">5</li>
           <li class='questiontrack'>Score:
             <span class='score' id='score'>0</span>
           </li>
@@ -22,6 +22,10 @@
     </section>
     <section class='startQuiz box endClose' id='startBox'>
       <img src='images/102508474-1568659085331preview-1.jpg' alt='The cast of Seinfeld sitting together' class='seinfeldgroupimg'>
+      <div class='button-class'>
+         <button class='startButton button'
+        id='startButton'>Start!</button>
+      </div>
     </section>
     <form id="form">
     <section class='questionBox endClose' id='questionBox'>
@@ -29,7 +33,7 @@
     <!-- radios of possible answers -->
     <section class='answerBox endClose' id='answerBox'>
     </section>
-    <button class="button">Submit</button>
+    <button type="submit" class="button">Submit</button>
     </form>
     <!-- displays after answer is submitted: right or wrong -->
     <section class='responseBox endClose' id='responseBox'>
@@ -39,10 +43,6 @@
     </section>
     <!-- very end, after all answers submitted -->
     <section class='finalBox' id='finalBox'>
-    </section>
-    <div class='button-class'>
-        <button type='submit' class='startButton button' id='startButton'>Start!</button>
-      </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src='script.js'></script>
